--- a/KYH/[전처리]PredictChurner.ipynb
+++ b/KYH/[전처리]PredictChurner.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "35ad9745",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "ae7ab533",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
        "(10127, 23)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -349,7 +349,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -576,7 +576,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "84e50e67",
    "metadata": {},
    "outputs": [],
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "059e31dc",
    "metadata": {
     "scrolled": true
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "0bd24a88",
    "metadata": {},
    "outputs": [
@@ -675,7 +675,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "fe2776da",
    "metadata": {},
    "outputs": [],
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 9,
    "id": "78686976",
    "metadata": {},
    "outputs": [],
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "id": "067f7c0c",
    "metadata": {},
    "outputs": [
@@ -760,7 +760,7 @@
        "0"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -770,7 +770,7 @@
        "0"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -780,7 +780,7 @@
        "0"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "id": "f74ac5bb",
    "metadata": {},
    "outputs": [
@@ -806,7 +806,7 @@
        "Name: Attrition_Flag, dtype: int64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "id": "84b140fc",
    "metadata": {},
    "outputs": [
@@ -827,7 +827,7 @@
        "0"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -837,7 +837,7 @@
        "10127"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "id": "07da05c2",
    "metadata": {},
    "outputs": [],
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "id": "a9208800",
    "metadata": {},
    "outputs": [
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "id": "902f89d3",
    "metadata": {},
    "outputs": [
@@ -927,7 +927,7 @@
        "Name: Education_Level, dtype: int64"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "id": "7c797d34",
    "metadata": {
     "scrolled": false
@@ -2401,7 +2401,7 @@
        "                Unknown                            145  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2412,7 +2412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 17,
    "id": "58e235d5",
    "metadata": {},
    "outputs": [
@@ -2429,7 +2429,7 @@
        "Name: Education_Level, dtype: int64"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2440,7 +2440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 18,
    "id": "82e1327a",
    "metadata": {},
    "outputs": [
@@ -2493,7 +2493,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2504,21 +2504,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 19,
    "id": "106c3616",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrameGroupBy' object has no attribute 'value_counts'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-131-f59e0bd4bb78>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mcnt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf_org\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Education_Level'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'Gender'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'Income_Category'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Education_Level'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Income_Category'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mcnt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\groupby\\groupby.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, attr)\u001b[0m\n\u001b[0;32m    750\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mattr\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    751\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 752\u001b[1;33m         raise AttributeError(\n\u001b[0m\u001b[0;32m    753\u001b[0m             \u001b[1;34mf\"'{type(self).__name__}' object has no attribute '{attr}'\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    754\u001b[0m         )\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrameGroupBy' object has no attribute 'value_counts'"
-     ]
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001416267E3A0>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2528,7 +2526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 20,
    "id": "aaf117ae",
    "metadata": {},
    "outputs": [
@@ -2789,13 +2787,287 @@
        "                Unknown                     145"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "temp = df_org[['Education_Level','Marital_Status','Income_Category']].groupby(['Education_Level', 'Income_Category'])\n",
+    "\n",
+    "temp.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1cc49db2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Marital_Status</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Education_Level</th>\n",
+       "      <th>Income_Category</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"6\" valign=\"top\">College</th>\n",
+       "      <th>$120K +</th>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$40K - $60K</th>\n",
+       "      <td>183</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$60K - $80K</th>\n",
+       "      <td>132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$80K - $120K</th>\n",
+       "      <td>175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Less than $40K</th>\n",
+       "      <td>345</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Unknown</th>\n",
+       "      <td>108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"6\" valign=\"top\">Doctorate</th>\n",
+       "      <th>$120K +</th>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$40K - $60K</th>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$60K - $80K</th>\n",
+       "      <td>59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$80K - $120K</th>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Less than $40K</th>\n",
+       "      <td>158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Unknown</th>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"6\" valign=\"top\">Graduate</th>\n",
+       "      <th>$120K +</th>\n",
+       "      <td>204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$40K - $60K</th>\n",
+       "      <td>553</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$60K - $80K</th>\n",
+       "      <td>422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$80K - $120K</th>\n",
+       "      <td>478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Less than $40K</th>\n",
+       "      <td>1139</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Unknown</th>\n",
+       "      <td>332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"6\" valign=\"top\">High School</th>\n",
+       "      <th>$120K +</th>\n",
+       "      <td>147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$40K - $60K</th>\n",
+       "      <td>355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$60K - $80K</th>\n",
+       "      <td>307</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$80K - $120K</th>\n",
+       "      <td>308</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Less than $40K</th>\n",
+       "      <td>671</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Unknown</th>\n",
+       "      <td>225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"6\" valign=\"top\">Post-Graduate</th>\n",
+       "      <th>$120K +</th>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$40K - $60K</th>\n",
+       "      <td>111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$60K - $80K</th>\n",
+       "      <td>77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$80K - $120K</th>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Less than $40K</th>\n",
+       "      <td>170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Unknown</th>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"6\" valign=\"top\">Uneducated</th>\n",
+       "      <th>$120K +</th>\n",
+       "      <td>119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$40K - $60K</th>\n",
+       "      <td>249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$60K - $80K</th>\n",
+       "      <td>195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$80K - $120K</th>\n",
+       "      <td>217</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Less than $40K</th>\n",
+       "      <td>522</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Unknown</th>\n",
+       "      <td>185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"6\" valign=\"top\">Unknown</th>\n",
+       "      <th>$120K +</th>\n",
+       "      <td>120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$40K - $60K</th>\n",
+       "      <td>269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$60K - $80K</th>\n",
+       "      <td>210</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$80K - $120K</th>\n",
+       "      <td>219</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Less than $40K</th>\n",
+       "      <td>556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Unknown</th>\n",
+       "      <td>145</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 Marital_Status\n",
+       "Education_Level Income_Category                \n",
+       "College         $120K +                      70\n",
+       "                $40K - $60K                 183\n",
+       "                $60K - $80K                 132\n",
+       "                $80K - $120K                175\n",
+       "                Less than $40K              345\n",
+       "                Unknown                     108\n",
+       "Doctorate       $120K +                      37\n",
+       "                $40K - $60K                  70\n",
+       "                $60K - $80K                  59\n",
+       "                $80K - $120K                 57\n",
+       "                Less than $40K              158\n",
+       "                Unknown                      70\n",
+       "Graduate        $120K +                     204\n",
+       "                $40K - $60K                 553\n",
+       "                $60K - $80K                 422\n",
+       "                $80K - $120K                478\n",
+       "                Less than $40K             1139\n",
+       "                Unknown                     332\n",
+       "High School     $120K +                     147\n",
+       "                $40K - $60K                 355\n",
+       "                $60K - $80K                 307\n",
+       "                $80K - $120K                308\n",
+       "                Less than $40K              671\n",
+       "                Unknown                     225\n",
+       "Post-Graduate   $120K +                      30\n",
+       "                $40K - $60K                 111\n",
+       "                $60K - $80K                  77\n",
+       "                $80K - $120K                 81\n",
+       "                Less than $40K              170\n",
+       "                Unknown                      47\n",
+       "Uneducated      $120K +                     119\n",
+       "                $40K - $60K                 249\n",
+       "                $60K - $80K                 195\n",
+       "                $80K - $120K                217\n",
+       "                Less than $40K              522\n",
+       "                Unknown                     185\n",
+       "Unknown         $120K +                     120\n",
+       "                $40K - $60K                 269\n",
+       "                $60K - $80K                 210\n",
+       "                $80K - $120K                219\n",
+       "                Less than $40K              556\n",
+       "                Unknown                     145"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp = df[['Education_Level','Marital_Status','Income_Category']].groupby(['Education_Level', 'Income_Category'])\n",
     "\n",
     "temp.count()"
    ]
