--- a/younghunahn/younghun.ipynb
+++ b/younghunahn/younghun.ipynb
@@ -379,6 +379,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "id": "0dc5b8da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CLIENTNUM                   0\n",
+       "Attrition_Flag              0\n",
+       "Customer_Age                0\n",
+       "Gender                      0\n",
+       "Dependent_count             0\n",
+       "Education_Level             0\n",
+       "Marital_Status              0\n",
+       "Income_Category             0\n",
+       "Card_Category               0\n",
+       "Months_on_book              0\n",
+       "Total_Relationship_Count    0\n",
+       "Months_Inactive_12_mon      0\n",
+       "Contacts_Count_12_mon       0\n",
+       "Credit_Limit                0\n",
+       "Total_Revolving_Bal         0\n",
+       "Avg_Open_To_Buy             0\n",
+       "Total_Amt_Chng_Q4_Q1        0\n",
+       "Total_Trans_Amt             0\n",
+       "Total_Trans_Ct              0\n",
+       "Total_Ct_Chng_Q4_Q1         0\n",
+       "Avg_Utilization_Ratio       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "14f7f4e1",
    "metadata": {},
@@ -1249,7 +1291,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "b423ef86",
+   "id": "4a034baf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1264,8 +1306,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "a5e6a28c",
+   "execution_count": 47,
+   "id": "8873fa13",
    "metadata": {
     "scrolled": true
    },
@@ -1276,7 +1318,7 @@
        "<AxesSubplot:xlabel='Customer_Age', ylabel='Density'>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1286,7 +1328,7 @@
        "<AxesSubplot:xlabel='Dependent_count', ylabel='Density'>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1296,7 +1338,7 @@
        "<AxesSubplot:xlabel='Months_on_book', ylabel='Density'>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1306,7 +1348,7 @@
        "<AxesSubplot:xlabel='Total_Relationship_Count', ylabel='Density'>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1316,7 +1358,7 @@
        "<AxesSubplot:xlabel='Months_Inactive_12_mon', ylabel='Density'>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1326,7 +1368,7 @@
        "<AxesSubplot:xlabel='Contacts_Count_12_mon', ylabel='Density'>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1336,7 +1378,7 @@
        "<AxesSubplot:xlabel='Credit_Limit', ylabel='Density'>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1346,7 +1388,7 @@
        "<AxesSubplot:xlabel='Total_Revolving_Bal', ylabel='Density'>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1356,7 +1398,7 @@
        "<AxesSubplot:xlabel='Avg_Open_To_Buy', ylabel='Density'>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1366,7 +1408,7 @@
        "<AxesSubplot:xlabel='Total_Amt_Chng_Q4_Q1', ylabel='Density'>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1376,7 +1418,7 @@
        "<AxesSubplot:xlabel='Total_Trans_Amt', ylabel='Density'>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1386,7 +1428,7 @@
        "<AxesSubplot:xlabel='Total_Trans_Ct', ylabel='Density'>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1396,7 +1438,7 @@
        "<AxesSubplot:xlabel='Total_Ct_Chng_Q4_Q1', ylabel='Density'>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1406,9 +1448,23 @@
        "<AxesSubplot:xlabel='Avg_Utilization_Ratio', ylabel='Density'>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "The x variable is categorical, but one of ['numeric', 'datetime'] is required",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-47-1faea7db11a5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[0mrow\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[0mcol\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m%\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m     \u001b[0msns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkdeplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfeature\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhue\u001b[0m \u001b[1;33m=\u001b[0m\u001b[1;34m'Gender'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdf1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0max\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0maxs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mD:\\anaconda3\\lib\\site-packages\\seaborn\\_decorators.py\u001b[0m in \u001b[0;36minner_f\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     44\u001b[0m             )\n\u001b[0;32m     45\u001b[0m         \u001b[0mkwargs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0marg\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0marg\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 46\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     47\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0minner_f\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     48\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\anaconda3\\lib\\site-packages\\seaborn\\distributions.py\u001b[0m in \u001b[0;36mkdeplot\u001b[1;34m(x, y, shade, vertical, kernel, bw, gridsize, cut, clip, legend, cumulative, shade_lowest, cbar, cbar_ax, cbar_kws, ax, weights, hue, palette, hue_order, hue_norm, multiple, common_norm, common_grid, levels, thresh, bw_method, bw_adjust, log_scale, color, fill, data, data2, **kwargs)\u001b[0m\n\u001b[0;32m   1718\u001b[0m     )\n\u001b[0;32m   1719\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1720\u001b[1;33m     \u001b[0mp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_attach\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0max\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mallowed_types\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"numeric\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"datetime\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlog_scale\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlog_scale\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1721\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1722\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munivariate\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\anaconda3\\lib\\site-packages\\seaborn\\_core.py\u001b[0m in \u001b[0;36m_attach\u001b[1;34m(self, obj, allowed_types, log_scale)\u001b[0m\n\u001b[0;32m   1116\u001b[0m                     \u001b[1;34mf\"{allowed_types} is required\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1117\u001b[0m                 )\n\u001b[1;32m-> 1118\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1119\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1120\u001b[0m             \u001b[1;31m# Register with the matplotlib unit conversion machinery\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: The x variable is categorical, but one of ['numeric', 'datetime'] is required"
+     ]
     },
     {
      "data": {
@@ -1446,7 +1502,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "c6dd595a",
+   "id": "c7a623d5",
    "metadata": {},
    "outputs": [
     {
@@ -1607,7 +1663,7 @@
     }
    ],
    "source": [
-    "fig, axs = plt.subplots(figsize=(16,16) , ncols=4 , nrows=4)\n",
+    "fig, axs = plt.subplots(figsize=(16,16) , ncols=3 , nrows=3)\n",
     "lm_features = ['Customer_Age','Dependent_count','Months_on_book',\n",
     "       'Total_Relationship_Count', 'Months_Inactive_12_mon',\n",
     "       'Contacts_Count_12_mon', 'Credit_Limit', 'Total_Revolving_Bal',\n",
@@ -1615,9 +1671,18 @@
     "       'Total_Trans_Ct', 'Total_Ct_Chng_Q4_Q1', 'Avg_Utilization_Ratio']\n",
     "\n",
     "# 각 요소에 대해 시각화\n",
+    "\n",
+    "\n",
     "for i , feature in enumerate(lm_features):\n",
-    "    row = int(i/4)\n",
+    "    row = int(i/4) \n",
     "    col = i%4\n",
+    "    font = {\n",
+    "        'color': 'white',\n",
+    "        'size' : 16\n",
+    "         }\n",
+    "\n",
+    "\n",
+    "    \n",
     "    sns.kdeplot(x=feature, hue ='Marital_Status', data=data,ax=axs[row][col])"
    ]
   },
