--- a/ASJ/PredictChurner(전처리).ipynb
+++ b/ASJ/PredictChurner(전처리).ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 1,
    "id": "0d195ffa",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 2,
    "id": "35ad9745",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "id": "059e31dc",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 4,
    "id": "fc540909",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 5,
    "id": "6a31e00f",
    "metadata": {},
    "outputs": [
@@ -609,7 +609,7 @@
        "max               3.714000               0.999000  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 6,
    "id": "b75dc7aa",
    "metadata": {},
    "outputs": [],
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 7,
    "id": "067f7c0c",
    "metadata": {},
    "outputs": [
@@ -677,7 +677,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 8,
    "id": "3246b230",
    "metadata": {
     "scrolled": true
@@ -776,7 +776,7 @@
        "Name: Attrition_Flag, dtype: int64"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 9,
    "id": "d128133e",
    "metadata": {
     "scrolled": false
@@ -799,7 +799,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3952,7 +3952,7 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001F07B8B6E50>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001C61275F610>"
       ]
      },
      "execution_count": 44,
@@ -5271,12 +5271,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Attrition_Flag와 Avg_Open_To_Buy 의 상관관계는 PointbiserialrResult(correlation=-0.0002850774939377916, pvalue=0.9771160894272927) 입니다.\n",
-      "Attrition_Flag와 Credit_Limit 의 상관관계는 PointbiserialrResult(correlation=-0.023872994836161524, pvalue=0.016285357205075734) 입니다.\n",
-      "Attrition_Flag와 Total_Revolving_Bal 의 상관관계는 PointbiserialrResult(correlation=-0.2630528831292033, pvalue=6.63014845528616e-160) 입니다.\n",
-      "Attrition_Flag와 Avg_Utilization_Ratio 의 상관관계는 PointbiserialrResult(correlation=-0.17841033156174702, pvalue=3.3576893281803397e-73) 입니다.\n",
-      "Attrition_Flag와 Total_Trans_Amt 의 상관관계는 PointbiserialrResult(correlation=-0.168598381410079, pvalue=1.8574386556246087e-65) 입니다.\n",
-      "Attrition_Flag와 Total_Trans_Ct 의 상관관계는 PointbiserialrResult(correlation=-0.3714027011889277, pvalue=0.0) 입니다.\n"
+      "Attrition_Flag와 Avg_Open_To_Buy 의 상관관계 : PointbiserialrResult(correlation=-0.0002850774939377916, pvalue=0.9771160894272927)\n",
+      "Attrition_Flag와 Credit_Limit 의 상관관계 : PointbiserialrResult(correlation=-0.023872994836161524, pvalue=0.016285357205075734)\n",
+      "Attrition_Flag와 Total_Revolving_Bal 의 상관관계 : PointbiserialrResult(correlation=-0.2630528831292033, pvalue=6.63014845528616e-160)\n",
+      "Attrition_Flag와 Avg_Utilization_Ratio 의 상관관계 : PointbiserialrResult(correlation=-0.17841033156174702, pvalue=3.3576893281803397e-73)\n",
+      "Attrition_Flag와 Total_Trans_Amt 의 상관관계 : PointbiserialrResult(correlation=-0.168598381410079, pvalue=1.8574386556246087e-65)\n",
+      "Attrition_Flag와 Total_Trans_Ct 의 상관관계 : PointbiserialrResult(correlation=-0.3714027011889277, pvalue=0.0)\n"
      ]
     }
    ],
@@ -5287,7 +5287,7 @@
     "\n",
     "for feature in features:\n",
     "    target_feature_corr = pointbiserialr(df['Attrition_Flag'], df[feature])\n",
-    "    print(\"Attrition_Flag와\",feature,\"의 상관관계는\",target_feature_corr,\"입니다.\")\n",
+    "    print(\"Attrition_Flag와\",feature,\"의 상관관계 :\",target_feature_corr)\n",
     "   "
    ]
   },
@@ -7019,6 +7019,16 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "오차 행렬\n",
+      "[[2063   62]\n",
+      " [ 202  205]]\n",
+      "정확도: 0.8957, 정밀도: 0.7678, 재현율: 0.5037,    F1: 0.6083, AUC:0.8877\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -7032,16 +7042,6 @@
       "Please also refer to the documentation for alternative solver options:\n",
       "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
       "  n_iter_i = _check_optimize_result(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "오차 행렬\n",
-      "[[2063   62]\n",
-      " [ 202  205]]\n",
-      "정확도: 0.8957, 정밀도: 0.7678, 재현율: 0.5037,    F1: 0.6083, AUC:0.8877\n"
      ]
     }
    ],
@@ -7828,20 +7828,7 @@
       "[31]\tvalid_0's binary_logloss: 0.192623\n",
       "[32]\tvalid_0's binary_logloss: 0.191908\n",
       "[33]\tvalid_0's binary_logloss: 0.190382\n",
-      "[34]\tvalid_0's binary_logloss: 0.189567\n",
-      "[35]\tvalid_0's binary_logloss: 0.188672\n",
-      "[36]\tvalid_0's binary_logloss: 0.188319\n",
-      "[37]\tvalid_0's binary_logloss: 0.187762\n",
-      "[38]\tvalid_0's binary_logloss: 0.187183\n",
-      "[39]\tvalid_0's binary_logloss: 0.186728\n",
-      "[40]\tvalid_0's binary_logloss: 0.185929\n",
-      "[41]\tvalid_0's binary_logloss: 0.185237\n",
-      "[42]\tvalid_0's binary_logloss: 0.184957\n",
-      "[43]\tvalid_0's binary_logloss: 0.184196\n",
-      "[44]\tvalid_0's binary_logloss: 0.184242\n",
-      "[45]\tvalid_0's binary_logloss: 0.183391\n",
-      "[46]\tvalid_0's binary_logloss: 0.182925\n",
-      "[47]\tvalid_0's binary_logloss: 0.182903\n"
+      "[34]\tvalid_0's binary_logloss: 0.189567\n"
      ]
     },
     {
@@ -7856,6 +7843,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[35]\tvalid_0's binary_logloss: 0.188672\n",
+      "[36]\tvalid_0's binary_logloss: 0.188319\n",
+      "[37]\tvalid_0's binary_logloss: 0.187762\n",
+      "[38]\tvalid_0's binary_logloss: 0.187183\n",
+      "[39]\tvalid_0's binary_logloss: 0.186728\n",
+      "[40]\tvalid_0's binary_logloss: 0.185929\n",
+      "[41]\tvalid_0's binary_logloss: 0.185237\n",
+      "[42]\tvalid_0's binary_logloss: 0.184957\n",
+      "[43]\tvalid_0's binary_logloss: 0.184196\n",
+      "[44]\tvalid_0's binary_logloss: 0.184242\n",
+      "[45]\tvalid_0's binary_logloss: 0.183391\n",
+      "[46]\tvalid_0's binary_logloss: 0.182925\n",
+      "[47]\tvalid_0's binary_logloss: 0.182903\n",
       "[48]\tvalid_0's binary_logloss: 0.182441\n",
       "[49]\tvalid_0's binary_logloss: 0.181924\n",
       "[50]\tvalid_0's binary_logloss: 0.182087\n",
@@ -8130,8 +8130,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "24f1b663",
+   "execution_count": 109,
+   "id": "2f6eb410",
    "metadata": {},
    "outputs": [
     {
@@ -8204,47 +8204,13 @@
        "4  0.0  0.173  0.995"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "id": "9ac89609",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'Attrition_Flag'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36mget_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3079\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3080\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3081\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mpandas\\_libs\\index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mpandas\\_libs\\index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'Attrition_Flag'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-107-b789a6c6ee2a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Attrition_Flag'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkind\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'bar'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3022\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3023\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3024\u001b[1;33m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3025\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3026\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36mget_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3080\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3081\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3082\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3083\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3084\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mtolerance\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'Attrition_Flag'"
-     ]
-    }
-   ],
-   "source": [
-    "df['Attrition_Flag'].value_counts().plot(kind = 'bar')\n"
    ]
   }
  ],
