--- a/younghunahn/Income_Category 대표값 활용 결측치 대체withPCA.ipynb
+++ b/younghunahn/Income_Category 대표값 활용 결측치 대체withPCA.ipynb
@@ -2099,17 +2099,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #  : 범주형 변수 (최빈값)\n",
+    "#  : 범주형 변수 (최빈값)\n",
     "\n",
-    "# # 그외 변수 : 연속형 변수 (평균값)\n",
+    "# 그외 변수 : 연속형 변수 (평균값)\n",
     "\n",
-    "# # 대표값을 평균으로 할지, 최빈값으로 사용 할 지 결정할 수 없음  --> 데이터를 분할해서 사용\n",
+    "# 대표값을 평균으로 할지, 최빈값으로 사용 할 지 결정할 수 없음  --> 데이터를 분할해서 사용\n",
     "\n",
-    "# Train_X_cate = Train_X[['Gender','Marital_Status','Education_Level','Income_Category','Card_Category']]\n",
-    "# Train_X_cont = Train_X.drop(['Gender','Marital_Status','Education_Level','Income_Category','Card_Category'],axis=1)\n",
+    "Train_X_cate = Train_X[['Gender','Marital_Status','Education_Level','Income_Category','Card_Category']]\n",
+    "Train_X_cont = Train_X.drop(['Gender','Marital_Status','Education_Level','Income_Category','Card_Category'],axis=1)\n",
     "\n",
-    "# Test_X_cate = Test_X[['Gender','Marital_Status','Education_Level','Income_Category','Card_Category']]\n",
-    "# Test_X_cont = Test_X.drop(['Gender','Marital_Status','Education_Level','Income_Category','Card_Category'],axis=1)"
+    "Test_X_cate = Test_X[['Gender','Marital_Status','Education_Level','Income_Category','Card_Category']]\n",
+    "Test_X_cont = Test_X.drop(['Gender','Marital_Status','Education_Level','Income_Category','Card_Category'],axis=1)"
    ]
   },
   {
@@ -2119,14 +2119,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # PCA 활용 \n",
+    "# PCA 활용 \n",
     "\n",
-    "# from sklearn.decomposition import PCA\n",
-    "# from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# # 스케일링 변환 작업\n",
-    "# scaler = StandardScaler()\n",
-    "# cont_scaled = scaler.fit_transform(Train_X_cont)"
+    "# 스케일링 변환 작업\n",
+    "scaler = StandardScaler()\n",
+    "cont_scaled = scaler.fit_transform(Train_X_cont)"
    ]
   },
   {
@@ -2136,9 +2136,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # PCA 적용\n",
-    "# pca = PCA(n_components=10) \n",
-    "# Train_X_pca = pca.fit_transform(cont_scaled)"
+    "# PCA 적용\n",
+    "pca = PCA(n_components=10) \n",
+    "Train_X_pca = pca.fit_transform(cont_scaled)"
    ]
   },
   {
@@ -2148,8 +2148,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pca_num = ['pca_component_'+str(i) for i in range(1,11)]\n",
-    "# print(pca_num)"
+    "pca_num = ['pca_component_'+str(i) for i in range(1,11)]\n",
+    "print(pca_num)"
    ]
   },
   {
@@ -2161,11 +2161,11 @@
    },
    "outputs": [],
    "source": [
-    "# # DF 로 변환\n",
+    "# DF 로 변환\n",
     "\n",
-    "# pca_columns = [pca_num]\n",
-    "# Train_pca = pd.DataFrame(Train_X_pca, columns=pca_columns)\n",
-    "# Train_pca"
+    "pca_columns = [pca_num]\n",
+    "Train_pca = pd.DataFrame(Train_X_pca, columns=pca_columns)\n",
+    "Train_pca"
    ]
   },
   {
@@ -2175,8 +2175,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # 변동성 확인\n",
-    "# print('PCA Component별 변동성:', pca.explained_variance_ratio_)"
+    "# 변동성 확인\n",
+    "print('PCA Component별 변동성:', pca.explained_variance_ratio_)"
    ]
   },
   {
@@ -2186,16 +2186,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import numpy as np\n",
-    "# from sklearn.ensemble import RandomForestClassifier\n",
-    "# from sklearn.model_selection import cross_val_score\n",
+    "import numpy as np\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "\n",
-    "# # cross_val_score( )로 분류 예측 수행 \n",
-    "# rcf = RandomForestClassifier(n_estimators=300, random_state=156)\n",
-    "# scores_pca = cross_val_score(rcf,Train_X_pca,Train_Y, scoring='accuracy', cv=3)\n",
+    "# cross_val_score( )로 분류 예측 수행 \n",
+    "rcf = RandomForestClassifier(n_estimators=300, random_state=156)\n",
+    "scores_pca = cross_val_score(rcf,Train_X_pca,Train_Y, scoring='accuracy', cv=3)\n",
     "\n",
-    "# print('CV=3 인 경우의 PCA 변환된 개별 Fold세트별 정확도:',scores_pca)\n",
-    "# print('PCA 변환 데이터 셋 평균 정확도:{0:.4f}'.format(np.mean(scores_pca)))"
+    "print('CV=3 인 경우의 PCA 변환된 개별 Fold세트별 정확도:',scores_pca)\n",
+    "print('PCA 변환 데이터 셋 평균 정확도:{0:.4f}'.format(np.mean(scores_pca)))"
    ]
   },
   {
@@ -2205,13 +2205,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import numpy as np\n",
-    "# from sklearn.ensemble import RandomForestClassifier\n",
-    "# from sklearn.model_selection import cross_val_score\n",
-    "# scores = cross_val_score(rcf,Train_X_cont,Train_Y, scoring='accuracy', cv=3 )\n",
+    "import numpy as np\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "scores = cross_val_score(rcf,Train_X_cont,Train_Y, scoring='accuracy', cv=3 )\n",
     "\n",
-    "# print('CV=3 인 경우의 개별 Fold세트별 정확도:',scores)\n",
-    "# print('평균 정확도:{0:.4f}'.format(np.mean(scores)))"
+    "print('CV=3 인 경우의 개별 Fold세트별 정확도:',scores)\n",
+    "print('평균 정확도:{0:.4f}'.format(np.mean(scores)))"
    ]
   },
   {
