--- a/younghunahn/BankChurners(PortFolio).ipynb
+++ b/younghunahn/BankChurners(PortFolio).ipynb
@@ -6459,7 +6459,7 @@
     }
    ],
    "source": [
-    "# DecisionTreeClassifier 학습/예측/평가\n",
+    "# DecisionTreeClassifier 학습/예측/평가http://localhost:8888/notebooks/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8(%EB%A8%B8%EC%8B%A0%EB%9F%AC%EB%8B%9D)/DS_team2/younghunahn/BankChurners(PortFolio).ipynb#\n",
     "dt_clf.fit(X_train, y_train)\n",
     "dt_pred = dt_clf.predict(X_test)\n",
     "dt_pred_proba = dt_clf.predict_proba(X_test)[:,1]\n",
