포트폴리오

--- a/younghunahn/[최종]영훈 발표.ipynb
+++ b/younghunahn/[최종]영훈 발표.ipynb
@@ -14,10 +14,9 @@
     "         (2) 피처 데이터 전처리 \n",
     "         (3) 피처 데이터 변수 선택\n",
     "         (4) 피처 엔지니어링\n",
+    "         (5) 전처리 함수화\n",
     "     5. 모델링\n",
-    "         (1) 지도학습\n",
-    "         (2) 군집화\n",
-    "     6. 테스팅"
+    "         지도학습"
    ]
   },
   {
@@ -4702,6 +4701,125 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36fda08e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cbd1a3f",
+   "metadata": {},
+   "source": [
+    "### 피처엔지니어링 함수화"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e7d43e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Unknown을 결측치로 처리 함수\n",
+    "def Unknown_to_nan(df):\n",
+    "    df.replace({\"Unknown\": np.nan},inplace=True) # 데이터 전체에 존재하는 \"Unknown\"을 결측치로 처리\n",
+    "    return df\n",
+    "\n",
+    "# 레이블 인코딩 수행 함수\n",
+    "def format_features(df):\n",
+    "    from sklearn.preprocessing import LabelEncoder\n",
+    "    features=['Education_Level','Income_Category','Card_Category','Marital_Status','Gender']\n",
+    "    for feature in features:\n",
+    "            le = LabelEncoder()\n",
+    "            le = le.fit(df[feature])\n",
+    "            df[feature] = le.transform(df[feature])\n",
+    "    return df\n",
+    "\n",
+    "# # Unknown도 무응답으로 인지 후 더미화 \n",
+    "# def format_features(df):\n",
+    "#     features=['Education_Level','Income_Category','Card_Category','Marital_Status','Gender']\n",
+    "#     for feature in features:\n",
+    "#         feature_OH =  pd.get_dummies(df[feature])\n",
+    "#         df = pd.concat([df, feature_OH], axis=1)\n",
+    "#         df.drop(feature,axis=1,inplace=True)\n",
+    "#     return df\n",
+    "\n",
+    "# 결측치를 대표값으로 대체하는 함수\n",
+    "def fill(df):\n",
+    "    # 대표값 이용 결측치 대체 모듈 \n",
+    "    from sklearn.impute import SimpleImputer\n",
+    "    # 각 데이터에 사용할 인스턴스 생성\n",
+    "    SI_mode =SimpleImputer(strategy = 'most_frequent') # 대표값 중 최빈값으로 결측치를 대체해준다.\n",
+    "    # 학습\n",
+    "    SI_mode.fit(df)\n",
+    "    df = pd.DataFrame(SI_mode.transform(df),\n",
+    "                            columns = df.columns)\n",
+    "    return df\n",
+    "    \n",
+    "# 데이타 타입을 수치형으로 바꿔주는 함수\n",
+    "def toNumerics(df):\n",
+    "    df[Numerics]=df[Numerics].astype(\"float\")\n",
+    "    df[Labels]=df[Labels].astype(\"int\")\n",
+    "    df[Orders]=df[Orders].astype(\"int\")\n",
+    "    df[\"Attrition_Flag\"]=df[\"Attrition_Flag\"].astype(\"int\")\n",
+    "    return df\n",
+    "\n",
+    "# 머신러닝 알고리즘에 불필요한 속성 제거\n",
+    "def drop_features(df):\n",
+    "    df.drop([\"CLIENTNUM\", # 식별자 삭제\n",
+    "         \"Avg_Open_To_Buy\",\n",
+    "         \"Avg_Utilization_Ratio\",\n",
+    "         \"Total_Trans_Amt\",\n",
+    "         \"Total_Amt_Chng_Q4_Q1\"], axis=1,inplace=True)\n",
+    "    return df\n",
+    "\n",
+    "# 로그변환 함수\n",
+    "def log_transformation(df):\n",
+    "   df[\"Credit_Limit\"]=np.log1p(df[\"Credit_Limit\"])\n",
+    "   return df\n",
+    "\n",
+    "# 수치형 변수 표준화 스케일링\n",
+    "def Standared_scaling(df):\n",
+    "    from sklearn.preprocessing import StandardScaler\n",
+    "    scaler = StandardScaler()\n",
+    "    for numeric in ['Customer_Age','Credit_Limit','Total_Revolving_Bal','Total_Ct_Chng_Q4_Q1','Total_Trans_Ct']:\n",
+    "        df[numeric] = scaler.fit_transform(df[numeric].values.reshape(-1,1))\n",
+    "    return df\n",
+    "    \n",
+    "\n",
+    "# 전처리 함수 호출\n",
+    "def transform_features(df):\n",
+    "    #df = Unknown_to_nan(df)\n",
+    "    df = format_features(df)\n",
+    "    df = fill(df)\n",
+    "    df = toNumerics(df)\n",
+    "    df = drop_features(df)\n",
+    "    df = log_transformation(df)\n",
+    "    df = Standared_scaling(df)\n",
+    "    return df\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cf91d87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02724288",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "57583234",
    "metadata": {},
@@ -4715,9 +4833,13 @@
    "metadata": {},
    "source": [
     "#### 사용할 알고리즘\n",
+    "- DecisionTreeClassifier\n",
+    "- RandomForestClassifier\n",
     "- LogisticRegression\n",
+    "- KNeighborsClassifier\n",
     "- XGBoost\n",
-    "- LightGBM"
+    "- LightGBM\n",
+    "- SVM"
    ]
   },
   {
@@ -4725,7 +4847,7 @@
    "id": "a0fe2ab3",
    "metadata": {},
    "source": [
-    "### 5 - (1)지도학습"
+    "### 5 - 지도학습"
    ]
   },
   {
@@ -4835,6 +4957,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65f4f9da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "b3f7d1a4",
    "metadata": {},
@@ -4866,22 +4996,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a01be79b",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33b8f96a",
    "metadata": {},
-   "source": [
-    "### 사용자 알고리즘 명"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9dd7e778",
-   "metadata": {},
-   "source": [
-    "- LogisticRegression\n",
-    "- XGBoost\n",
-    "- LightGBM\n"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -14849,7 +14969,6 @@
     }
    ],
    "source": [
-    "\n",
     "precision_recall_curve_plot(y_test,pred_proba[:, 1]   )"
    ]
   },
@@ -14864,7 +14983,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -14878,7 +14997,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
