--- a/ASJ/[최종]PredictChurner_210928_v3.ipynb
+++ b/ASJ/[최종]PredictChurner_210928_v3.ipynb
@@ -4056,7 +4056,13 @@
    "id": "181e6f65",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 성별 수입\n",
+    "df_piv = df.groupby(['Gender','Income_Category']).count()[\"CLIENTNUM\"]\n",
+    "df_piv\n",
+    "\n",
+    "df_piv.plot(kind = 'bar')"
+   ]
   },
   {
    "cell_type": "code",
@@ -6261,7 +6267,9 @@
    "cell_type": "code",
    "execution_count": 140,
    "id": "a2f9ebdc",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -6278,6 +6286,64 @@
    ],
    "source": [
     "roc_curve_plot(y_test, xgb_wrapper.predict_proba(X_test)[:, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65482345",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import VotingClassifier\n",
+    "dt_clf = DecisionTreeClassifier()\n",
+    "lr_clf = LogisticRegression(solver = 'liblinear') ## solver : 최적화 문제에 사용하는 알고리즘\n",
+    "knn_clf = KNeighborsClassifier(n_neighbors = 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa90874f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 개별 모델을 소프트 보팅 기반의 앙상블 모델로 구현한 분류기 인스턴스 생성\n",
+    "vo_clf = VotingClassifier(estimators = [('DT', dt_clf),('LR', lr_clf),('KNN',knn_clf)], voting = 'soft')\n",
+    "vo_clf.fit(X_train, y_train)\n",
+    "v_preds = vo_clf.predict(X_test)\n",
+    "v_pred_proba = vo_clf.predict_proba(X_test)[:,1]\n",
+    "get_clf_eval(y_test, v_preds, v_pred_proba)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02969150",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 학습/ 예측/ 평가\n",
+    "vo_clf.fit(X_train, y_train)\n",
+    "pred = vo_clf.predict(X_test)\n",
+    "# 평가\n",
+    "print(\"voting 분류기 정확도 : {0:4f}\".format(accuracy_score(y_test, pred)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a15b920b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classifiers = [dt_clf, lr_clf, knn_clf]\n",
+    "\n",
+    "for classifier in classifiers:\n",
+    "    classifier.fit(X_train , y_train)\n",
+    "    pred = classifier.predict(X_test)\n",
+    "    class_name= classifier.__class__.__name__  # __class__ : 클래스명  # __name__ : 클래스명 추출\n",
+    "    print('{0} 정확도: {1:.4f}'.format(class_name, accuracy_score(y_test , pred)))"
    ]
   }
  ],
